# shipshape

./: .gitignore  .overcommit.yml  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  index.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: linter.yml
src/: lib.rs
tests/: test.rs
