[package]
name = "shipshape"
version = "0.1.0"
authors = ["Jacob <31115470+MrMcGoats@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
hyper = "0.13.5"
hyper-socket = "0.2.0"

[dev-dependencies]
actix-rt = "1.1.1"
