[package]
name = "shipshape"
version = "0.1.1"
authors = ["Jacob <31115470+MrMcGoats@users.noreply.github.com>"]
edition = "2018"
license = "BSD-3-Clause"
keywords = ["docker", "container"]
repository = "https://github.com/Jacob-MacMillan-Software/shipshape"
exclude = [".github", ".overcommit.yml"]
readme = "README.md"
description = "A crate to interact with Docker in Rust"
homepage = "https://jacobmacmillan.digital/shipshape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
hyper = "0.13.5"
hyper-socket = "0.2.0"

[dev-dependencies]
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

